	* selectPublicKey implemented in cgpg
	* Import system implemented
	* Add a detection of blanks selections
	* Add a system for detection of valid PGP'blocks

2007-03-06  Achraf cherti
	* list dialog (list.xul, list.js, list*dtd) implemented.
	* selectPublicKey() implemented (it show a dialog with all keys).
	* two optional arguments are added to showText() : description
	  and title.

2007-03-05  Maximilien Cuony
	* Fix an error in getPrivateKeyPassword()
	* Cgpg class in now finish !
	* Implementation of getSelfKey(), for get the default key !
	* Full implementation for saving the password, with a menu for erase it.
	* Come back to default UUID
	* Fixed problems with complied package !
	* Version 0.1 Packed, and uploaded to the server !
	* Fixed a bug in select system who didn't look at \n in some texts
	* Add support for select text with HTML and <br> balises

2007-03-05  Achraf cherti
	* new function getPrivateKeyPassword() (with i18n support), to replace
	  the generic function getPassword(question, save_password)
	* new in options dialog : specify the path of GPG, show the FireGPG official
	  website.
	* Shorter version of names : firegpgSelect -> Selection, 
	  Selection.isSelectionEditable -> isEditable, getSelection -> get,
	  setSelection -> set.
	* dcrypt -> decrypt / DCRYPT -> DECRYPT
	* new optional argument in getPrivateKeyPassword : savePassword.
	* FireGPG_GPG* -> GPG (because it's shorter and we have the already the namespace)
	* some orthography errors fixed in the french/english locales
	* all warnings/errors found are fixed (password.xul, password.js...)

2007-03-04  Achraf cherti
	* the default private key is saved and selected by default when
	  the options dialog is loaded.
	* TODO file added.
	* somes improvements in the style of the code and the indentation 
	  of *.xul.
	* FileGPG_GPG.cleanTmpPath(), FileGPG_GPG.getTmpPath() and 
	  FileGPG_GPG.getTmpFile() moved to misc.js. There names are